--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bitget-api",
-  "version": "1.1.4",
-  "description": "Node.js connector for Bitget REST APIs and WebSockets, with TypeScript & end-to-end tests.",
+  "version": "2.0.0",
+  "description": "Node.js & JavaScript SDK for Bitget REST APIs & WebSockets, with TypeScript & end-to-end tests.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
