--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
   "devDependencies": {
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.23",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
     "eslint": "^8.24.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-require-extensions": "^0.1.3",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "jest": "^29.1.1",
     "source-map-loader": "^4.0.0",
     "ts-jest": "^29.0.2",
