chore(): fix and run linter, bump node version to LTS

--- a/tsconfig.linting.json
+++ b/tsconfig.linting.json
@@ -12,6 +12,7 @@
     "test/**/*.*",
     "examples/**/*.*",
     ".eslintrc.cjs",
-    "jest.config.ts"
+    "jest.config.ts",
+    "webpack/webpack.config.ts"
   ]
 }
