--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
   },
   "devDependencies": {
     "@types/jest": "^29.0.3",
-    "@types/node": "^18.7.23",
+    "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -42,7 +43,7 @@
     "source-map-loader": "^4.0.0",
     "ts-jest": "^29.0.2",
     "ts-loader": "^9.4.1",
-    "typescript": "^4.8.4",
+    "typescript": "^5.7.3",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.10.0"
