--- a/package.json
+++ b/package.json
@@ -49,13 +49,14 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-require-extensions": "^0.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "jest": "^29.1.1",
-    "source-map-loader": "^4.0.0",
-    "ts-jest": "^29.0.2",
-    "ts-loader": "^9.4.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
   "optionalDependencies": {
+    "source-map-loader": "^4.0.0",
+    "ts-loader": "^9.4.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
