--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "source-map-loader": "^4.0.0",
     "ts-loader": "^9.5.4",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-bundle-analyzer": "^4.10.2"
+    "webpack-bundle-analyzer": "^5.1.1",
+    "webpack-cli": "^4.10.0"
   },
   "keywords": [
     "bitget",
